@@ -90,6 +90,7 @@ extern z80_byte kempston_mouse_x,kempston_mouse_y;
 extern void joystick_print_types(void);
 
 extern void joystick_cycle_next_type(void);
+extern z80_byte kempston_mouse_factor_sensibilidad;
 
 
 #endif
